--- a/zadatak22.html
+++ b/zadatak22.html
@@ -5,8 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background: #e4e4e4;
+            padding: 5px;
+            height: 100vh;
+            margin: 0;
+            font: 500 100% system-ui, sans-serif;
+            text-transform: uppercase;
+        }
+        .page-wrap{
+            display: grid;
+            grid-template-columns: minmax(10px, 1fr) minmax(10px, 3fr);
+            grid-template-rows: min-content min-content 1fr min-content;
+            grid-gap: 1px;
+            background: white;
+            height: calc(100vh - 10px);
+            box-shadow: 0 0 3px rgba(black, 0.33);
+        }
+        .page-wrap > *{
+            padding: 1rem;
+            text-align: center;
+        }
+        .page-header{
+            grid-column: 1 / -1;
+            background: #ffcdd2;
+        }
+        .page-sidebar{
+            grid-column: 1 / 2;
+            grid-row: 2 / 4;
+            background: #e1bee7;
+        }
+        .page-nav{
+            grid-column: 2 / 3;
+            background: #bbdefb;
+        }
+        .page-main{
+            grid-column: 2 / 3;
+            background: #dcedc8;
+        }
+        .page-footer{
+            grid-column: 1 / -1;
+            background: #ffecb3;
+        }
+        details p{
+            text-transform: none;
+            text-align: left;
+        }
+        @media (max-width: 600px){
+            .page-wrap{
+                grid-template-columns: 100%;
+                grid-template-rows: auto;
+            }
+            .page-wrap > *{
+                grid-column: 1 / -1;
+                grid-row: auto;
+            }
+        }
+
+    </style>
 </head>
 <body>
-    
+    <div class="page-wrap">
+        <header class="page-header">
+            Header
+        </header>
+        <nav class="page-nav">
+            Nav
+        </nav>
+        <main class="page-main">
+            <article>
+                <details>
+                    <summary>Article</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolorem dolor quisquam temporibus delectus, hic saepe nihil atque dolore 
+                        reiciendis vel nulla repellendus excepturi aliquam adipisci nam error porro ab? Vero dolor, beatae officiis ducimus reprehenderit non 
+                        similique eaque minima impedit aperiam possimus quo obcaecati doloribus assumenda rerum corrupti commodi cupiditate dolore eum sequi, 
+                        suscipit enim error? Temporibus nemo placeat aspernatur quas mollitia eius, vitae voluptatem rerum, ut esse aperiam impedit! Saepe 
+                        repudiandae laudantium odit voluptatum nihil eos dignissimos atque dolor vitae. Magnam voluptatum quisquam ab excepturi eligendi 
+                        saepe incidunt porro repudiandae? Provident velit quas quasi id perspiciatis, ipsum blanditiis aspernatur accusantium minus illo iure, 
+                        mollitia recusandae, odio quos impedit doloribus illum modi voluptas nostrum quod. Esse ipsa corporis cupiditate mollitia. 
+                    </p>
+                    <p>
+                        Ducimus repudiandae, minima numquam accusantium ab praesentium delectus saepe dicta! Cum totam officia, impedit nemo iure a repellendus reiciendis 
+                        asperiores qui voluptatem commodi dolorem voluptate iusto nostrum saepe illum possimus, labore laudantium maiores ad. Mollitia, at, 
+                        iste iure repudiandae ipsam quos aperiam ducimus maxime adipisci esse sit consequatur neque enim quia natus velit provident. Velit 
+                        repudiandae neque illum totam voluptates dolorem quia veniam ipsum corrupti et. Aspernatur magnam quaerat laudantium quae? Mollitia 
+                        ratione, consequuntur quos ipsa dolorem voluptatibus error. 
+                    </p>
+                </details>
+            </article>
+        </main>
+        <aside class="page-sidebar">
+            Aside
+        </aside>
+        <footer class="page-footer">
+            Footer
+        </footer>
+    </div>
 </body>
 </html>
